# aurora-core

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  nicollier_vis.mlx  setup.sh
.git_hooks/: pre-commit
aurora_core/: Cargo.toml
aurora_hal/: Cargo.toml
aurora_hal/aurora_hal_macros/: Cargo.toml
aurora_hal/aurora_hal_macros/src/: Callbacks.toml  CentralDataStruct.toml  IoTree.toml  expression_parser.lalrpop  lib.rs  struct.toml
aurora_hal/old/: condition_tests.rs  expression_tree.rs
aurora_hal/src/: hal_event_generators.rs  iotree.rs  lib.rs  signaling.rs
aurora_hal/src/atomic_traits/: fetch.rs  mod.rs
aurora_hal/src/can/: PROTOCOL.md  mod.rs
aurora_hal/src/can/protocol/: message.rs  mod.rs
aurora_hal/tests/: Value_tests.rs  create_io_tree.rs  io_event_gen.rs  test_signaling.rs  value_tests.rs
nicollier_trajectory_viewer/: Cargo.toml
nicollier_trajectory_viewer/assets/terrain_data/wichlen/: swissSURFACE3D_Raster_0.5_xyz_CHLV95_LN02_2725_1193.xyz  swissSURFACE3D_Raster_0.5_xyz_CHLV95_LN02_2725_1194.xyz  swissSURFACE3D_Raster_0.5_xyz_CHLV95_LN02_2725_1195.xyz  swissSURFACE3D_Raster_0.5_xyz_CHLV95_LN02_2726_1193.xyz  swissSURFACE3D_Raster_0.5_xyz_CHLV95_LN02_2726_1194.xyz  swissSURFACE3D_Raster_0.5_xyz_CHLV95_LN02_2726_1195.xyz  swissSURFACE3D_Raster_0.5_xyz_CHLV95_LN02_2727_1193.xyz  swissSURFACE3D_Raster_0.5_xyz_CHLV95_LN02_2727_1195.xyz  swissSURFACE3D_Raster_0.5_xyz_CHLV95_LN02_2728_1193.xyz  swissSURFACE3D_Raster_0.5_xyz_CHLV95_LN02_2728_1194.xyz  swissSURFACE3D_Raster_0.5_xyz_CHLV95_LN02_2728_1195.xyz  swissSURFACE3D_Raster_0.5_xyz_CHLV95_LN02_2729_1193.xyz  swissSURFACE3D_Raster_0.5_xyz_CHLV95_LN02_2729_1194.xyz  swissSURFACE3D_Raster_0.5_xyz_CHLV95_LN02_2729_1195.xyz
nicollier_trajectory_viewer/assets/terrain_data/wichlen/2725_1193/: swissSURFACE3D_Raster_0.5_xyz_CHLV95_LN02_2725_1193.xyz
nicollier_trajectory_viewer/assets/terrain_data/wichlen/2725_1194/: swissSURFACE3D_Raster_0.5_xyz_CHLV95_LN02_2725_1194.xyz
nicollier_trajectory_viewer/assets/terrain_data/wichlen/2725_1195/: swissSURFACE3D_Raster_0.5_xyz_CHLV95_LN02_2725_1195.xyz
nicollier_trajectory_viewer/src/: camera_controller.rs  coordinate_systems.rs  main.rs  memory_profiler.rs  terrain.rs  trajectory.rs
(+85 files in other folders)
