[package]
name = "event_gen"
version = "0.1.0"
authors = ["Klark007 <jan.grunder@yahoo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aurora_hal_macros = { path = "aurora_hal_macros" }
atomic_float = "0.1.0"
#atomic-traits = "0.3.0"
cfg-if = "1.0.0"
lazy_static = "1.4.0"

