[package]
name = "nicollier_trajectory_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
memory-profile = ["dep:alloc-track"]

[dependencies]
bevy = "0.11"
serde = { version = "1.0.190", features = ["derive"] }
csv = "1.3"
anyhow = "1.0"
ordered-float = "4.1"
alloc-track = { version = "0.3.0", optional = true }
nicollier_gnc = {path = "../nicollier_gnc"}